--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
 </head>
   <body class="bg-slate-50 dark:bg-navy-950 text-slate-900 dark:text-slate-100 min-h-screen">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
